[package]
name = "text-to-sounds"
version = "0.2.2"
edition = "2021"
authors = ["maksugr <maksugr@gmail.com>"]
description = "Text-to-sounds parsing tool."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/text-to-sounds/"
homepage = "https://github.com/maksugr/text-to-sounds"
repository = "https://github.com/maksugr/text-to-sounds"
readme = "README.md"
keywords = ["parsing", "serialization", "sounds", "english", "grammar"]
categories = ["parser-implementations"]

[dependencies]

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4"
]
