[package]
name = "text-to-sounds"
version = "0.3.1"
edition = "2021"
authors = ["maksugr <maksugr@gmail.com>"]
description = "Text-to-sounds parsing tool."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/text-to-sounds/"
homepage = "https://github.com/maksugr/text-to-sounds"
repository = "https://github.com/maksugr/text-to-sounds"
readme = "README.md"
keywords = ["parsing", "wasm", "webassembly", "english", "grammar"]
categories = ["parser-implementations", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
js-sys = "0.3.58"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "serde",
    "js"
]

[profile.release]
opt-level = "s"
