[package]
name = "text-to-sounds"
version = "1.0.2"
edition = "2021"
authors = ["maksugr <maksugr@gmail.com>"]
description = "Text-to-sounds parsing tool."
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/text-to-sounds/"
homepage = "https://github.com/maksugr/text-to-sounds"
repository = "https://github.com/maksugr/text-to-sounds"
readme = "README.md"
keywords = ["parsing", "wasm", "webassembly", "english", "grammar"]
categories = ["parser-implementations", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.63" }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "js"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
